# libdai

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.LINUX  Makefile.conf  README  build.sh  fl_wrapper.cpp  wrapper.cpp
BINGO/: .gitattributes  .gitignore  cleanup.sh  init.sh  readme.md
BINGO/resources/: wmifumax-0.9.tgz
BINGO/resources/idea/chord_incubator/: modules.xml
BINGO/resources/idea/chord_incubator/libraries/: chord_incubator.xml
BINGO/resources/idea/jchord/: modules.xml
BINGO/resources/idea/jchord/libraries/: jchord.xml
BINGO/resources/idea/nichrome/: modules.xml
BINGO/resources/jdk/: sdk-tools-linux-3859397.zip.REMOVED.git-id
BINGO/scripts/ae-wrappers/: init.sh  run-opt-bingo.sh
BINGO/scripts/bnet/: accmd  bnet2dice.py  build-bnet.sh  driver.py  driver_ace.py
BINGO/scripts/bnet/unopt/: build-bnet.sh
FL/: bp.patch  readme.md
ext/: CMakeLists.txt
ext/include/dai_ext/: causal_bp.h  causal_em.h  causal_fg.h  multithread_emalg.h
ext/src/: causal_bp.cpp  causal_em.cpp  causal_fg.cpp  mutithread_emalg.cpp
include/dai/: bp.h  doc.h  evidence.h  glc.h  util.h
pln-tests/handcraft/: pln.fg  pln0.fg
pln-tests/test/: obs.list  pln.fg
pln-tests/toy/: pln.fg
resources/: boost_1_61_0.tgz.REMOVED.git-id
resources/idea/chord_incubator/: workspace.xml
resources/idea/jchord/: workspace.xml
resources/idea/nichrome/: workspace.xml
resources/idea/nichrome/libraries/: nichrome.xml
scripts/: clone.sh
scripts/ae-wrappers/: run-opt-bingo.sh
scripts/bnet/: bnet2causal_fg.py  driver_ace.py
scripts/bnet/compressed/: build-bnet.sh
scripts/bnet/prune-cons/: prune-cons-unopt
src/: bp.cpp  factorgraph.cpp  util.cpp
utils/: CMakeLists.txt
wrapper/: CMakeLists.txt  fgcheck.cpp  fl_wrapper.cpp  libdai-swig-wrapper-test-bp.cpp  libdai-swig-wrapper-test-em.cpp  libdai-swig-wrapper-test.cpp  libdai-swig-wrapper.h  libdai-swig-wrapper.i  multipredict-wrapper.cpp  predict-wrapper.cpp  update-wrapper.cpp
